semana01, dia01, html

--- a/semana01/dia01-html/index.html
+++ b/semana01/dia01-html/index.html
@@ -9,17 +9,22 @@
   <main>
     <section class="photo"></section>
     <section class="content">
-      Perfume
+      <h3>Perfume</h3>
 
-      Gabrielle Essence Eau De Parfum
+      <h1>Gabrielle Essence Eau De Parfum</h1>
 
-      A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-      Perfumer-Creator for the House of CHANEL.
+      <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+        Perfumer-Creator for the House of CHANEL.</p>
 
-      $149.99
-      $169.99
+      <div>
+        <span>$149.99</span>
+        <span>$169.99</span>
+      </div>
 
-      Add to Cart
+      <button>
+        <img src="./images/icon-cart.svg" />
+        Add to Cart
+      </button>
     </section>
   </main>
 </body>
