semana01, dia01, html

--- a/semana01/dia01-html/index.html
+++ b/semana01/dia01-html/index.html
@@ -4,6 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dia01 - HTML</title>
+  <style>
+    /* p {
+      color: green;
+    } */
+  </style>
+  <link rel="stylesheet" href="./estilos.css">
 </head>
 <body>
   <main>
