semana01, dia01, html

--- a/semana01/dia01-html/index.html
+++ b/semana01/dia01-html/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <main>
-    <section class="photo">xxx</section>
+    <section class="photo"></section>
     <section class="content">
       <h3>Perfume</h3>
 
