--- a/semana01/dia02-html-reto/index.html
+++ b/semana01/dia02-html-reto/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>dia02 - html reto</title>
+  <link rel="stylesheet" href="./estilos.css">
 </head>
 <body>
   <main>
