--- a/semana01/dia02-html-etiquetas/index.html
+++ b/semana01/dia02-html-etiquetas/index.html
@@ -6,6 +6,60 @@
   <title>Etiquetas HTML</title>
 </head>
 <body>
+  <h1>Etiquetas HTML</h1>
+
+  <h1>Heading tag 1</h1>
+  <h2>Heading tag 2</h2>
+  <h3>Heading tag 3</h3>
+  <h4>Heading tag 4</h4>
+  <h5>Heading tag 5</h5>
+  <h6>Heading tag 6</h6>
+
+  <p>Soy un párrafo y puedo escribir texto largo y de múltiples líneas. Soy un párrafo y puedo escribir texto largo y de múltiples líneas. Soy un párrafo y puedo escribir texto largo y de múltiples líneas.</p>
+  <p>Soy un párrafo y puedo escribir texto largo y de múltiples líneas. Soy un párrafo y puedo escribir texto largo y de múltiples líneas. Soy un párrafo y puedo escribir texto largo y de múltiples líneas.</p>
+
+  <img src="https://mario.nintendo.com/static/a5f7fe49f4862aa68eaba347ee05c336/fef79/mario.png" width="100" />
+  <img src="./luigi.png" width="100" />
+
+  <hr />
+
+  <ul>
+    <li>Primer item de la lista desordenada</li>
+    <li>Segundo item</li>
+    <li>Tercer item</li>
+  </ul>
+
+  <ol>
+    <li>Primer item de la lista ordenada</li>
+    <li>Segundo item</li>
+    <li>Tercer item</li>
+  </ol>
+
+  <dl>
+    <dt>Soy el título de esta descripción</dt>
+    <dd>Soy la descripción de este título</dd>
+
+    <dt>Soy el título de esta descripción</dt>
+    <dd>Soy la descripción de este título</dd>
+
+    <dt>Soy el título de esta descripción</dt>
+    <dd>Soy la descripción de este título</dd>
+  </dl>
+
+  <hr />
+
+  <strong>Soy la etiqueta strong</strong><br />
+  <b>Soy la etiqueta b y hago lo mismo que la etiqueta strong</b><br />
+  <u>Soy una etiqueta para subrayar texto</u><br />
+  <i>Soy una etiqueta para mostrarme en cursiva</i><br />
+  <em>Soy una etiqueta para mostrarme en cursiva</em><br />
+  <p>
+    <a href="https://youtube.com">Soy un enlace a youtube.com</a><br />
+    <a href="https://youtube.com" target="_blank">Soy un enlace a youtube.com que se abre en otra pestaña</a>
+  </p>
+
+  <hr />
+
   
 </body>
 </html>
