--- a/semana01/dia02-html-etiquetas/index.html
+++ b/semana01/dia02-html-etiquetas/index.html
@@ -60,6 +60,68 @@
 
   <hr />
 
-  
+  <div>
+    Sivo para dividir/separar el contenido y soy del tipo bloque
+  </div>
+
+  <div>
+    Sivo para dividir/separar el contenido y soy del tipo bloque
+  </div>
+
+  <hr />
+
+  <span>Sirvo para dividir/separar el contenido y estoy en la misma línea del texto (inline).</span>
+  <span>Sirvo para dividir/separar el contenido y estoy en la misma línea del texto (inline).</span>
+  <span>soy otra etiqueta span</span>
+  <strong>soy strong</strong>
+
+  <hr />
+
+  <div>
+    <h2>Zapatillas Nike</h2>
+    <p>Zapatillas de color blanco y verde</p>
+    <img src="https://runastore.pe/media/catalog/product/cache/1ad426beaceeac5935cd76675f3d6a1f/d/x/dx3705-102_1.jpg" width="200" />
+  </div>
+
+  <hr />
+
+  <p>Lorem ipsum dolor sit amet <strong>consectetur adipisicing</strong> elit. Provident incidunt <u>ipsum quod</u>, quam repudiandae exercitationem <em>iusto ipsam</em> modi commodi dolores ratione doloribus sed nihil repellendus sequi accusantium aspernatur deleniti maxime.</p>
+
+  <hr />
+
+  <h2>Etiquetas semánticas</h2>
+
+  <header>Soy un header</header>
+  <nav>Soy un etiqueta para añadir la navegación a tu sitio</nav>
+  <main>
+    soy una etiqueta main
+
+    <aside>
+      Soy un aside y mi conenido es para mostrarlo en un lateral de la página
+    </aside>
+
+    <section>
+      Soy un section y puedo repetirme muchas veces
+
+      <article>
+        <h2>Zapatillas Nike</h2>
+        <p>Zapatillas de color blanco y verde</p>
+        <img src="https://runastore.pe/media/catalog/product/cache/1ad426beaceeac5935cd76675f3d6a1f/d/x/dx3705-102_1.jpg" width="200" />
+      </article>
+    </section>
+  </main>
+
+  <footer>Soy un footer para mostrar contenido en la parte inferior de tu página</footer>
+
+  <hr />
+
+  <pre>
+    function mensaje(str) {
+      console.log(str)
+    }
+  </pre>
+
+  <video src="./sample_960x400_ocean_with_audio.mp4" controls muted autoplay width="500"></video>
+  <audio src="./Symphony No.6 (1st movement).mp3" controls></audio>
 </body>
 </html>
