semana02, dia01, formularios

--- a/semana02/dia01-formularios/index.html
+++ b/semana02/dia01-formularios/index.html
@@ -82,6 +82,55 @@
         <input type="hidden" value="datos-ocultos" name="datooculto" /> 
 
         <input type="submit" value="Guardar" />
+        <input type="reset" value="Limpiar" />
+      </form>
+
+      <form>
+        <h2>Input tipo fecha</h2>
+
+        <label>
+          Input tipo date-time-local (fecha y hora)
+          <input type="datetime-local" name="fecha" />
+        </label>
+
+        <label>
+          Input tipo date (día)
+          <input type="date" name="dia" />
+        </label>
+
+        <label>
+          Input tipo week (semana)
+          <input type="week" name="semana" />
+        </label>
+
+        <label>
+          Input tipo month (mes)
+          <input type="month" name="mes" />
+        </label>
+
+        <input type="submit" value="Guardar" />
+      </form>
+
+      <form>
+        <h2>Textarea</h2>
+
+        <label>
+          <textarea placeholder="Escribe una descripción sobre ti..." rows="5" cols="4" name="biografia"></textarea>
+        </label>
+
+        <label>
+          <textarea placeholder="Escribe una descripción sobre ti..." rows="5" cols="4" name="biografia2" disabled></textarea>
+        </label>
+
+        <input type="submit" value="Guardar" />
+      </form>
+
+      <form>
+        <h2>Selects</h2>
+
+        
+
+        <input type="submit" value="Guardar" />
       </form>
     </main>
   </body>
