--- a/semana02/dia01-formularios/index.html
+++ b/semana02/dia01-formularios/index.html
@@ -128,10 +128,79 @@
       <form>
         <h2>Selects</h2>
 
-        
+        <label>
+          Comida favorita
+          <select>
+            <option value="">Selecciona tu comida favorita...</option>
+            <option value="fr">Francesa</option>
+            <option value="it">Italiana</option>
+            <option value="jp">Japonesa</option>
+            <option value="pe">Peruana</option>
+            <option value="th">Tailandesa</option>
+          </select>
+        </label>
 
         <input type="submit" value="Guardar" />
       </form>
+
+      <form>
+        <h2>Checkboxes</h2>
+
+        <h3>Lenguajes de preferencia:</h3>
+
+        <label>
+          <input type="checkbox" name="english" value="en" />
+          Inglés
+        </label>
+        <label>
+          <input type="checkbox" name="spanish" value="es" />
+          Español
+        </label>
+        <label>
+          <input type="checkbox" name="dothraki" value="do" />
+          Dothraki
+        </label>
+
+        <input type="submit" value="Guardar" />
+      </form>
+
+      <form>
+        <h2>Radio buttons</h2>
+
+        <h3>Seleccione el lenguajes de preferencia:</h3>
+
+        <label>
+          <input type="radio" name="language" value="en" />
+          Inglés
+        </label>
+        <label>
+          <input type="radio" name="language" value="es" />
+          Español
+        </label>
+        <label>
+          <input type="radio" name="language" value="do" />
+          Dothraki
+        </label>
+
+        <h3>Seleccione su comida favorita:</h3>
+
+        <label>
+          <input type="radio" name="comida" value="ceviche" />
+          Ceviche
+        </label>
+        <label>
+          <input type="radio" name="comida" value="causa" />
+          Causa
+        </label>
+        <label>
+          <input type="radio" name="comida" value="arroz" />
+          Arroz con pato
+        </label>
+
+        <input type="submit" value="Guardar" />
+      </form>
+
+      
     </main>
   </body>
 </html>
