semana02, dia01, formularios

--- a/semana02/dia01-formularios/index.html
+++ b/semana02/dia01-formularios/index.html
@@ -200,7 +200,43 @@
         <input type="submit" value="Guardar" />
       </form>
 
-      
+      <form>
+        <h2>Validaciones</h2>
+
+        <label>
+          Nombre (obligatorio)
+          <input type="text" name="nombre" required minlength="3" maxlength="15" />
+        </label>
+
+        <label>
+          Email (obligatorio)
+          <input type="email" name="correo" required />
+        </label>
+
+        <label>
+          Edad (obligatorio)
+          <input type="number" name="edad" required min="1" max="99" />
+        </label>
+
+        <label>
+          Teléfono (obligatorio)
+          <input type="tel" name="telefono" placeholder="+51 999 999 999" required pattern="\+[0-9]{2} [0-9]{3} [0-9]{3} [0-9]{3}" />
+        </label>
+
+        <label>
+          Comidas (obligatorio)
+          <select name="comidas" required>
+            <option value="">Selecciona tu comida favorita...</option>
+            <option value="fr">Francesa</option>
+            <option value="it">Italiana</option>
+            <option value="jp">Japonesa</option>
+            <option value="pe">Peruana</option>
+            <option value="th">Tailandesa</option>
+          </select>
+        </label>
+
+        <input type="submit" value="Guardar" />
+      </form>
     </main>
   </body>
 </html>
