--- a/semana02/dia01-04-reto1/index.html
+++ b/semana02/dia01-04-reto1/index.html
@@ -25,7 +25,7 @@
 
       <label>
         Email Address <span class="required">*</span>
-        <input type="text" name="email" />
+        <input type="email" name="email" />
       </label>
 
       <label>
