--- a/semana02/dia01-04-reto1/index.html
+++ b/semana02/dia01-04-reto1/index.html
@@ -28,20 +28,20 @@
         <input type="email" name="email" />
       </label>
 
-      <label>
+      <div>
         Query Type <span class="required">*</span>
         
         <div class="row">
-          <div class="query-type">
+          <label class="query-type">
             <input type="radio" name="query_type" />
             General Enquiry
-          </div>
-          <div class="query-type">
+          </label>
+          <label class="query-type">
             <input type="radio" name="query_type" />
             Support Request
-          </div>
+          </label>
         </div>
-      </label>
+      </div>
 
       <label>
         Message <span class="required">*</span>
@@ -49,7 +49,7 @@
         <textarea rows="5"></textarea>
       </label>
 
-      <label>
+      <label class="flex">
         <input type="checkbox" />
         I consent to being contacted by the team
       </label>
