semana02, dia02, landing page con el modelo de caja de css

--- a/semana02/dia02-02-landing-page-modelo-de-caja-css/index.html
+++ b/semana02/dia02-02-landing-page-modelo-de-caja-css/index.html
@@ -7,17 +7,17 @@
   <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-  <header>
-    <img src="./images/logo.svg" alt="Logo Fylo" />
+  <header class="header">
+    <img class="header__logo" src="./images/logo.svg" alt="Logo Fylo" />
 
-    <nav>
-      <a href="">Features</a>
+    <nav class="header__nav">
+      <a href="header__nav--active">Features</a>
       <a href="">Team</a>
       <a href="">Sign In</a>
     </nav>
   </header>
 
-  <main>
+  <main class="hidden">
     All your files in one secure location, accessible anywhere.
 
     Fylo stores all your most important files in one secure location. Access them wherever 
