semana02, dia02, landing page con el modelo de caja de css

--- a/semana02/dia02-02-landing-page-modelo-de-caja-css/index.html
+++ b/semana02/dia02-02-landing-page-modelo-de-caja-css/index.html
@@ -67,41 +67,59 @@
       </article>
     </section>
 
-    <section class="hidden">
-      Stay productive, wherever you are
+    <section class="collaboration">
+      <img src="./images/illustration-stay-productive.png" />
 
-      Never let location be an issue when accessing your files. Fylo has you covered for all of your file 
-      storage needs.
+      <div class="how_works">
+        <h3 class="how_works__title">Stay productive, wherever you are</h3>
 
-      Securely share files and folders with friends, family and colleagues for live collaboration. No email 
-      attachments required.
+        <p class="how_works__text">Never let location be an issue when accessing your files. Fylo has you covered for all of your file 
+          storage needs.</p>
 
-      See how Fylo works
+        <p class="how_works__text">Securely share files and folders with friends, family and colleagues for live collaboration. No email 
+          attachments required.</p>
 
-      Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
+        <a href="" class="how_works__button">
+          See how Fylo works
+        </a>
+      </div>
+    </section>
+
+    <section class="testimonials">
+      <article class="testimonial">
+        Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
       become a well-oiled collaboration machine.
 
-      Satish Patel
-      Founder & CEO, Huddle
+        Satish Patel
+        Founder & CEO, Huddle
+      </article>
 
-      Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
+      <article class="testimonial">
+        Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
       become a well-oiled collaboration machine.
 
-      Bruce McKenzie
-      Founder & CEO, Huddle
+        Bruce McKenzie
+        Founder & CEO, Huddle
+      </article>
+      
+      <article class="testimonial">
+        Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
+        become a well-oiled collaboration machine.
 
-      Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-      become a well-oiled collaboration machine.
+        Iva Boyd
+        Founder & CEO, Huddle
+      </article>
+    </section>
 
-      Iva Boyd
-      Founder & CEO, Huddle
-
-      Get early access today
-
-      It only takes a minute to sign up and our free starter tier is extremely generous. If you have any 
-      questions, our support team would be happy to help you.
-
-      Get Started For Free
+    <footer>
+      <section>
+        Get early access today
+  
+        It only takes a minute to sign up and our free starter tier is extremely generous. If you have any 
+        questions, our support team would be happy to help you.
+  
+        Get Started For Free
+      </section>
 
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
       dolore magna aliqua
@@ -117,7 +135,7 @@
       Contact Us
       Terms
       Privacy
-    </section>
+    </footer>
   </main>
 </body>
 </html>
