semana02, dia02, landing page con el modelo de caja de css

--- a/semana02/dia02-02-landing-page-modelo-de-caja-css/index.html
+++ b/semana02/dia02-02-landing-page-modelo-de-caja-css/index.html
@@ -111,8 +111,8 @@
       </article>
     </section>
 
-    <footer>
-      <section>
+    <footer class="footer">
+      <section class="early-access">
         Get early access today
   
         It only takes a minute to sign up and our free starter tier is extremely generous. If you have any 
