--- a/semana03/dia01-01-landing-page-modelo-de-caja-css-continuacion/index.html
+++ b/semana03/dia01-01-landing-page-modelo-de-caja-css-continuacion/index.html
@@ -81,6 +81,7 @@
 
         <a href="" class="how_works__button">
           See how Fylo works
+          <img src="./images/icon-arrow.svg" />
         </a>
       </div>
     </section>
@@ -111,7 +112,7 @@
       </article>
     </section>
 
-    <footer class="footer">
+    <footer class="footer hidden">
       <section class="early-access">
         Get early access today
   
