semana03, dia01, landing page con el modelo de caja de css continuación

--- a/semana03/dia01-01-landing-page-modelo-de-caja-css-continuacion/index.html
+++ b/semana03/dia01-01-landing-page-modelo-de-caja-css-continuacion/index.html
@@ -129,16 +129,16 @@
       </div>
     </section>
 
-    <footer class="footer hidden">
-      <section class="early-access">
-        Get early access today
-  
-        It only takes a minute to sign up and our free starter tier is extremely generous. If you have any 
-        questions, our support team would be happy to help you.
-  
-        Get Started For Free
-      </section>
+    <section class="early-access">
+      Get early access today
 
+      It only takes a minute to sign up and our free starter tier is extremely generous. If you have any 
+      questions, our support team would be happy to help you.
+
+      Get Started For Free
+    </section>
+
+    <footer class="footer">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
       dolore magna aliqua
 
