semana03, dia01, landing page con el modelo de caja de css continuación

--- a/semana03/dia01-01-landing-page-modelo-de-caja-css-continuacion/index.html
+++ b/semana03/dia01-01-landing-page-modelo-de-caja-css-continuacion/index.html
@@ -130,12 +130,17 @@
     </section>
 
     <section class="early-access">
-      Get early access today
+      <div class="early-access--wrapper">
+        <h2>Get early access today</h2>
 
-      It only takes a minute to sign up and our free starter tier is extremely generous. If you have any 
-      questions, our support team would be happy to help you.
+        <p>It only takes a minute to sign up and our free starter tier is extremely generous. If you have any 
+          questions, our support team would be happy to help you.</p>
 
-      Get Started For Free
+        <form>
+          <input type="text" placeholder="email@example.com" />
+          <input type="submit" value="Get Started For Free" />
+        </form>
+      </div>
     </section>
 
     <footer class="footer">
