semana03, dia02, ecommerce page html css

--- a/semana03/dia02-01-ecommerce-html-css/index.html
+++ b/semana03/dia02-01-ecommerce-html-css/index.html
@@ -7,24 +7,37 @@
   <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-  Collections
-  Men
-  Women
-  About
-  Contact
+  <header class="header">
+    <img class="header__logo" src="./images/logo.svg" />
 
-  Sneaker Company
+    <nav class="header__links">
+      <a href="">Collections</a>
+      <a href="">Men</a>
+      <a href="">Women</a>
+      <a href="">About</a>
+      <a href="">Contact</a>
+    </nav>
 
-  Fall Limited Edition Sneakers
+    <div class="header__icons">
+      <img src="./images/icon-cart.svg" />
+      <img src="./images/image-avatar.png" width="32" height="32" />
+    </div>
+  </header>
 
-  These low-profile sneakers are your perfect casual wear companion. Featuring a 
-  durable rubber outer sole, they’ll withstand everything the weather can offer.
+  <main class="hidden">
+    Sneaker Company
 
-  $125.00
-  50%
-  $250.00
+    Fall Limited Edition Sneakers
 
-  0
-  Add to cart
+    These low-profile sneakers are your perfect casual wear companion. Featuring a 
+    durable rubber outer sole, they’ll withstand everything the weather can offer.
+
+    $125.00
+    50%
+    $250.00
+
+    0
+    Add to cart
+  </main>
 </body>
 </html>
