--- a/semana03/dia02-01-ecommerce-html-css/index.html
+++ b/semana03/dia02-01-ecommerce-html-css/index.html
@@ -8,15 +8,17 @@
 </head>
 <body>
   <header class="header">
-    <img class="header__logo" src="./images/logo.svg" />
+    <div class="header__wrapper">
+      <img class="header__logo" src="./images/logo.svg" />
 
-    <nav class="header__links">
-      <a href="">Collections</a>
-      <a href="">Men</a>
-      <a href="">Women</a>
-      <a href="">About</a>
-      <a href="">Contact</a>
-    </nav>
+      <nav class="header__links">
+        <a href="">Collections</a>
+        <a href="">Men</a>
+        <a href="">Women</a>
+        <a href="">About</a>
+        <a href="">Contact</a>
+      </nav>
+    </div>
 
     <div class="header__icons">
       <img src="./images/icon-cart.svg" />
