--- a/semana03/dia02-01-ecommerce-html-css/index.html
+++ b/semana03/dia02-01-ecommerce-html-css/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-  <header class="header">
+  <header class="header wrapper">
     <div class="header__wrapper">
       <img class="header__logo" src="./images/logo.svg" />
 
