semana03, dia02, ecommerce page html css

--- a/semana03/dia02-01-ecommerce-html-css/index.html
+++ b/semana03/dia02-01-ecommerce-html-css/index.html
@@ -26,20 +26,38 @@
     </div>
   </header>
 
-  <main class="hidden">
-    Sneaker Company
+  <main class="product-detail wrapper">
+    <h2>Sneaker Company</h2>
 
-    Fall Limited Edition Sneakers
+    <h1>Fall Limited Edition Sneakers</h1>
 
-    These low-profile sneakers are your perfect casual wear companion. Featuring a 
-    durable rubber outer sole, they’ll withstand everything the weather can offer.
+    <p>These low-profile sneakers are your perfect casual wear companion. Featuring a 
+      durable rubber outer sole, they’ll withstand everything the weather can offer.</p>
 
-    $125.00
-    50%
-    $250.00
+    <div class="product__price">
+      <div class="product__wrapper">
+        <span class="product__amount">$125.00</span>
+        <span class="product__discount">50%</span>
+      </div>
+      <span class="product__price-with-discount">$250.00</span>
+    </div>
 
-    0
-    Add to cart
+    <form class="product__form">
+      <div class="product__quantity">
+        <button>
+          <img src="./images/icon-minus.svg" />
+        </button>
+        <input type="text" readonly value="1" />
+        <button>
+          <img src="./images/icon-plus.svg" />
+        </button>
+      </div>
+
+      <button class="product__add-to-cart">
+        <img src="./images/icon-cart.svg" />
+        Add to cart
+      </button>
+    </form>
   </main>
 </body>
 </html>
