semana03, dia02, ecommerce page html css

--- a/semana03/dia02-01-ecommerce-html-css/index.html
+++ b/semana03/dia02-01-ecommerce-html-css/index.html
@@ -46,11 +46,11 @@
       </div>
     </section>
     <section class="product">
-      <h2>Sneaker Company</h2>
+      <h2 class="product__subtitle">Sneaker Company</h2>
 
-      <h1>Fall Limited Edition Sneakers</h1>
+      <h1 class="product__title">Fall Limited Edition Sneakers</h1>
 
-      <p>These low-profile sneakers are your perfect casual wear companion. Featuring a 
+      <p class="product__description">These low-profile sneakers are your perfect casual wear companion. Featuring a 
         durable rubber outer sole, they’ll withstand everything the weather can offer.</p>
 
       <div class="product__price">
