semana03, dia03, ecommerce html css continuación RWD

--- a/semana03/dia02-01-ecommerce-html-css/index.html
+++ b/semana03/dia02-01-ecommerce-html-css/index.html
@@ -9,6 +9,8 @@
 <body>
   <header class="header wrapper">
     <div class="header__wrapper">
+      <img class="header__menu" src="./images/icon-menu.svg" />
+
       <img class="header__logo" src="./images/logo.svg" />
 
       <nav class="header__links">
