semana03, dia03, mi portafolio usando figma

--- a/semana03/dia03-02-mi-portafolio-con-figma/index.html
+++ b/semana03/dia03-02-mi-portafolio-con-figma/index.html
@@ -7,6 +7,27 @@
   <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-  <img src="./images/icon-html5.svg" />
+  <header class="header wrapper">
+    <span class="header__logo">{vv}</span>
+
+    <nav class="header__menu">
+      <a href="#acerca-de-mi" class="header__menu--active">acerca de mi</a>
+      <a href="#habilidades">habilidades</a>
+      <a href="#portafolio">portafolio</a>
+    </nav>
+
+    <div class="header__links">
+      <img src="./images/icon-github.svg" />
+      <img src="./images/icon-linkedin.svg" />
+    </div>
+  </header>
+
+  <main>
+
+  </main>
+
+  <footer>
+    
+  </footer>
 </body>
 </html>
