--- a/semana03/dia03-02-mi-portafolio-con-figma/index.html
+++ b/semana03/dia03-02-mi-portafolio-con-figma/index.html
@@ -23,11 +23,76 @@
   </header>
 
   <main>
+    <section class="hero">
+      <h2 class="hero__gretting">Hola, Soy Victor Doe 💪</h2>
+      <h1 class="hero__title">Desarrollador web full-stack</h1>
+      <p class="hero__description">Desarrollador especializado en Javascript, React.js, Vue, Python y Node.js.</p>
 
+      <img class="hero__photo" src="https://placehold.co/278x278" alt="Foto de Victor Doe" />
+
+      <div class="stack">
+
+        <div class="stack__wrap">
+          <h3 class="stack__title">html</h3>
+          <div class="stack__box">
+            <img src="./images/icon-html5.svg" width="70" height="70" />
+          </div>
+        </div>
+
+        <div class="stack__wrap">
+          <h3 class="stack__title">css</h3>
+          <div class="stack__box">
+            <img src="./images/icon-css3.svg" width="70" height="70" />
+          </div>
+        </div>
+
+        <div class="stack__wrap">
+          <h3 class="stack__title">js</h3>
+          <div class="stack__box">
+            <img src="./images/icon-javascript.svg" width="70" height="70" />
+          </div>
+        </div>
+
+        <div class="stack__wrap">
+          <h3 class="stack__title">react.js</h3>
+          <div class="stack__box">
+            <img src="./images/icon-reactjs.svg" width="70" height="70" />
+          </div>
+        </div>
+
+        <div class="stack__wrap">
+          <h3 class="stack__title">node.js</h3>
+          <div class="stack__box">
+            <img src="./images/icon-nodejs.svg" width="70" height="70" />
+          </div>
+        </div>
+
+        <div class="stack__wrap">
+          <h3 class="stack__title">python</h3>
+          <div class="stack__box">
+            <img src="./images/icon-python.svg" width="70" height="70" />
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    <section class="skills wrapper">
+      <div class="skills__info">
+
+      </div>
+
+      <div class="skills__list">
+
+      </div>
+    </section>
   </main>
 
-  <footer>
-    
+  <footer class="footer">
+    <span class="footer__logo">{vv}</span>
+    <p class="footer__copy">
+      Made with 💖 by victorvzn - Diciembre 2024
+    </p>
   </footer>
 </body>
 </html>
