semana04, dia01, mi portafolio usando figma (resolviendo el reto)

--- a/semana04/dia01-01-mi-portafolio-con-figma/index.html
+++ b/semana04/dia01-01-mi-portafolio-con-figma/index.html
@@ -91,7 +91,7 @@
   <footer class="footer">
     <span class="footer__logo">{vv}</span>
     <p class="footer__copy">
-      Made with 💖 by victorvzn - Diciembre 2024
+      Made with 💖 by victorvzn - Enero 2025
     </p>
   </footer>
 </body>
