semana04, dia01, mi portafolio usando figma (resolviendo el reto)

--- a/semana04/dia01-01-mi-portafolio-con-figma/index.html
+++ b/semana04/dia01-01-mi-portafolio-con-figma/index.html
@@ -17,8 +17,12 @@
     </nav>
 
     <div class="header__links">
-      <img src="./images/icon-github.svg" />
-      <img src="./images/icon-linkedin.svg" />
+      <a href="https://github.com/victorvzn" target="_blank">
+        <img src="./images/icon-github.svg" />
+      </a>
+      <a  href="https://linkedin.com/in/victorvzn" target="_blank">
+        <img src="./images/icon-linkedin.svg" />
+      </a>
     </div>
   </header>
 
