semana04, dia01, mi portafolio usando figma (resolviendo el reto)

--- a/semana04/dia01-01-mi-portafolio-con-figma/index.html
+++ b/semana04/dia01-01-mi-portafolio-con-figma/index.html
@@ -17,6 +17,9 @@
     </nav>
 
     <div class="header__links">
+      <a href="">
+        <img src="./images/icon-sun.svg" />
+      </a>
       <a href="https://github.com/victorvzn" target="_blank">
         <img src="./images/icon-github.svg" />
       </a>
