semana04, dia01, mi portafolio usando figma (resolviendo el reto)

--- a/semana04/dia01-01-mi-portafolio-con-figma/index.html
+++ b/semana04/dia01-01-mi-portafolio-con-figma/index.html
@@ -31,7 +31,7 @@
 
   <main>
     <section class="hero">
-      <h2 class="hero__gretting">Hola, Soy Victor Doe 💪</h2>
+      <h2 class="hero__gretting">Hola, Soy <span>victor doe</span> 💪</h2>
       <h1 class="hero__title">Desarrollador web full-stack</h1>
       <p class="hero__description">Desarrollador especializado en Javascript, React.js, Vue, Python y Node.js.</p>
 
