semana04, dia01, mi portafolio usando figma (resolviendo el reto)

--- a/semana04/dia01-01-mi-portafolio-con-figma/index.html
+++ b/semana04/dia01-01-mi-portafolio-con-figma/index.html
@@ -40,42 +40,42 @@
       <div class="stack">
 
         <div class="stack__wrap">
-          <h3 class="stack__title">html</h3>
+          <h3 class="stack__title">HTML</h3>
           <div class="stack__box">
             <img src="./images/icon-html5.svg" width="70" height="70" />
           </div>
         </div>
 
         <div class="stack__wrap">
-          <h3 class="stack__title">css</h3>
+          <h3 class="stack__title">CSS</h3>
           <div class="stack__box">
             <img src="./images/icon-css3.svg" width="70" height="70" />
           </div>
         </div>
 
         <div class="stack__wrap">
-          <h3 class="stack__title">js</h3>
+          <h3 class="stack__title">Javascript</h3>
           <div class="stack__box">
             <img src="./images/icon-javascript.svg" width="70" height="70" />
           </div>
         </div>
 
         <div class="stack__wrap">
-          <h3 class="stack__title">react.js</h3>
+          <h3 class="stack__title">React.js</h3>
           <div class="stack__box">
             <img src="./images/icon-reactjs.svg" width="70" height="70" />
           </div>
         </div>
 
         <div class="stack__wrap">
-          <h3 class="stack__title">node.js</h3>
+          <h3 class="stack__title">Node.js</h3>
           <div class="stack__box">
             <img src="./images/icon-nodejs.svg" width="70" height="70" />
           </div>
         </div>
 
         <div class="stack__wrap">
-          <h3 class="stack__title">python</h3>
+          <h3 class="stack__title">Python</h3>
           <div class="stack__box">
             <img src="./images/icon-python.svg" width="70" height="70" />
           </div>
