semana04, dia01, mi portafolio usando figma (resolviendo el reto)

--- a/semana04/dia01-01-mi-portafolio-con-figma/index.html
+++ b/semana04/dia01-01-mi-portafolio-con-figma/index.html
@@ -86,11 +86,117 @@
 
     <section class="skills wrapper">
       <div class="skills__info">
+        <span class="skills__tag">Mis habilidades</span>
 
+        <h2 class="skills__title">Mis habilidades de programador incluyen</h2>
+
+        <p class="skills__content">Desarrollo de interfaces de usuario simples, intuitivas y responsive que ayudan a los usuarios a hacer sus tareas con menos esfuerzo y tiempo con esas tecnologías.</p>
+
+        <p class="skills__content">
+          Para más información, visita mi <a href="" target="_blank">Github</a> o <a href="" target="_blank">Linkedin</a>.
+        </p>
       </div>
 
       <div class="skills__list">
+        <div class="skills__box">
+          <img src="./images/icon-html5.svg" width="48" height="48" />
+        </div>
+        <div class="skills__box">
+          <img src="./images/icon-css3.svg" width="48" height="48" />
+        </div>
+        <div class="skills__box">
+          <img src="./images/icon-javascript.svg" width="48" height="48" />
+        </div>
+        <div class="skills__box">
+          <img src="./images/icon-github.svg" width="48" height="48" />
+        </div>
+        <div class="skills__box">
+          <img src="./images/icon-html5.svg" width="48" height="48" />
+        </div>
+        <div class="skills__box">
+          <img src="./images/icon-html5.svg" width="48" height="48" />
+        </div>
+        <div class="skills__box">
+          <img src="./images/icon-html5.svg" width="48" height="48" />
+        </div>
+        <div class="skills__box">
+          <img src="./images/icon-html5.svg" width="48" height="48" />
+        </div>
+        <div class="skills__box">
+          <img src="./images/icon-html5.svg" width="48" height="48" />
+        </div>
+        <div class="skills__box">
+          <img src="./images/icon-html5.svg" width="48" height="48" />
+        </div>
+        <div class="skills__box">
+          <img src="./images/icon-html5.svg" width="48" height="48" />
+        </div>
+        <div class="skills__box">
+          <img src="./images/icon-html5.svg" width="48" height="48" />
+        </div>
+        <div class="skills__box">
+          <img src="./images/icon-html5.svg" width="48" height="48" />
+        </div>
+      </div>
+    </section>
 
+    <section class="projects wrapper">
+      <h3 class="projects__tag">Mi portafolio</h3>
+      <h2 class="projects__title">Trabajos destacados</h2>
+
+      <nav class="projects__tabs">
+        <a href="" class="projects__tab-item projects__tab-item--active">Todos</a>
+        <a href="" class="projects__tab-item">HTML/CSS</a>
+        <a href="" class="projects__tab-item">React.js</a>
+        <a href="" class="projects__tab-item">Challenges</a>
+      </nav>
+
+      <div class="projects__list">
+        <article class="project-item">
+          <img src="https://placehold.co/390x495" alt="Proyecto 1" />
+          <div class="project-item__cover">
+            <h4>Memkards</h4>
+            <p>Desarrollo de interfaces de usuario simples, intuitivas y responsive que ayudan a los usuarios a hacer sus tareas con menos esfuerzo y tiempo con esas tecnologías.</p>
+            <div>
+              <a href="" target="_blank">
+                <img src="./images/icon-github.svg" />
+              </a>
+              <a href="" target="_blank">
+                <img src="./images/icon-linkedin.svg" />
+              </a>
+            </div>
+          </div>
+        </article>
+        <article class="project-item">
+          <img src="https://placehold.co/390x495" alt="Proyecto 1" />
+          <div class="project-item__cover">
+            <h4>Memkards 2</h4>
+            <p>Desarrollo de interfaces de usuario simples, intuitivas y responsive que ayudan a los usuarios a hacer sus tareas con menos esfuerzo y tiempo con esas tecnologías.</p>
+            <div>
+              <a href="" target="_blank">
+                <img src="./images/icon-github.svg" />
+              </a>
+              <a href="" target="_blank">
+                <img src="./images/icon-linkedin.svg" />
+              </a>
+            </div>
+          </div>
+        </article>
+        <article class="project-item">
+          <img src="https://placehold.co/390x495" alt="Proyecto 1" />
+          <div class="project-item__cover">
+            <h4>Memkards 3</h4>
+            <p>Desarrollo de interfaces de usuario simples, intuitivas y responsive que ayudan a los usuarios a hacer sus tareas con menos esfuerzo y tiempo con esas tecnologías.</p>
+            <div>
+              <a href="" target="_blank">
+                <img src="./images/icon-github.svg" />
+              </a>
+              <a href="" target="_blank">
+                <img src="./images/icon-linkedin.svg" />
+              </a>
+            </div>
+          </div>
+        </article>
       </div>
     </section>
   </main>
