--- a/semana04/dia02-01-css-grid-flexbox-dashboard/index.html
+++ b/semana04/dia02-01-css-grid-flexbox-dashboard/index.html
@@ -7,6 +7,27 @@
   <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-  
+  <header class="header">
+    <img class="header__menu" src="./icon-menu.svg" />
+    <img class="header__settings" src="./icon-settings.svg" />
+  </header>
+
+  <aside class="sidebar">
+    SIDEBAR
+  </aside>
+
+  <aside class="settings">
+    SETTINGS
+  </aside>
+
+  <main class="main">
+    <!-- EMMET: div.card*6{CARD $} -->
+    <div class="card">CARD 1</div>
+    <div class="card">CARD 2</div>
+    <div class="card">CARD 3</div>
+    <div class="card">CARD 4</div>
+    <div class="card">CARD 5</div>
+    <div class="card">CARD 6</div>
+  </main>
 </body>
 </html>
