semana04, dia02, css grid, flexbox, dashboard

--- a/semana04/dia02-01-css-grid-flexbox-dashboard/index.html
+++ b/semana04/dia02-01-css-grid-flexbox-dashboard/index.html
@@ -9,6 +9,7 @@
 <body>
   <header class="header">
     <img class="header__menu" src="./icon-menu.svg" />
+    <h1>Dashboard</h1>
     <img class="header__settings" src="./icon-settings.svg" />
   </header>
 
