--- a/semana04/dia02-01-css-grid-flexbox-dashboard/index.html
+++ b/semana04/dia02-01-css-grid-flexbox-dashboard/index.html
@@ -30,5 +30,14 @@
     <div class="card">CARD 5</div>
     <div class="card">CARD 6</div>
   </main>
+
+  <script>
+    const buttonMenu = document.querySelector('.header__menu')
+    const sidebarMenu = document.querySelector('.sidebar')
+
+    buttonMenu.addEventListener('click', () => {
+      sidebarMenu.classList.toggle('sidebar--open')
+    })
+  </script>
 </body>
 </html>
