--- a/semana05/dia01-css-reto1-results-sumary/index.html
+++ b/semana05/dia01-css-reto1-results-sumary/index.html
@@ -8,27 +8,48 @@
 </head>
 <body>
   <!-- TODO: Maquetar en HTML el diseño de este reto -->
-  Your Result
-  76
-  of 100
+  <main class="summary">
+    <section class="result">
+      <h3 class="result__subtitle">Your Result</h3>
+      
+      <div class="result__stats">
+        <h1>76</h1>
+        <small>of 100</small>
+      </div>
 
-  Great
-  You scored higher than 65% of the people who have taken these tests.
-  
-  Summary
+      <h2 class="result__title">Great</h2>
+      <p class="result__text">You scored higher than 65% of the people who have taken these tests.</p>
+    </section>
+    
+    <section class="list">
+      <h3>Summary</h3>
 
-  Reaction
-  80 / 100
+      <div class="list__wrapper">
 
-  Memory
-  92 / 100
+        <div class="list__row list__row--reaction">
+          <div class="list__title">
+            <img src="./assets/images/icon-reaction.svg" alt="reaction icon" />
+            Reaction
+          </div>
+          <div class="list__stats">
+            <span>80</span>
+            <span>/</span>
+            <span>100</span>
+          </div>
+        </div>
 
-  Verbal
-  61 / 100
+        Memory
+        92 / 100
 
-  Visual
-  72 / 100
+        Verbal
+        61 / 100
 
-  Continue
+        Visual
+        72 / 100
+      </div>
+
+      Continue
+    </section>
+  </main>
 </body>
 </html>
