semana05, dia01, css reto results summary

--- a/semana05/dia01-css-reto1-results-sumary/index.html
+++ b/semana05/dia01-css-reto1-results-sumary/index.html
@@ -38,17 +38,44 @@
           </div>
         </div>
 
-        Memory
-        92 / 100
+        <div class="list__row list__row--memory">
+          <div class="list__title">
+            <img src="./assets/images/icon-memory.svg" alt="memory icon" />
+            Memory
+          </div>
+          <div class="list__stats">
+            <span>92</span>
+            <span>/</span>
+            <span>100</span>
+          </div>
+        </div>
 
-        Verbal
-        61 / 100
+        <div class="list__row list__row--verbal">
+          <div class="list__title">
+            <img src="./assets/images/icon-verbal.svg" alt="verbal icon" />
+            Verbal
+          </div>
+          <div class="list__stats">
+            <span>61</span>
+            <span>/</span>
+            <span>100</span>
+          </div>
+        </div>
 
-        Visual
-        72 / 100
+        <div class="list__row list__row--visual">
+          <div class="list__title">
+            <img src="./assets/images/icon-visual.svg" alt="visual icon" />
+            Visual
+          </div>
+          <div class="list__stats">
+            <span>72</span>
+            <span>/</span>
+            <span>100</span>
+          </div>
+        </div>
       </div>
 
-      Continue
+      <button class="list__button">Continue</button>
     </section>
   </main>
 </body>
